samples/_failures_safe/1761527577_5e264f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9fb08344.c: In function ‘main’:
./samples/SAFE/__tmp_9fb08344.c:166:12: error: missing terminating " character
  166 |     printf("Enter text
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_9fb08344.c:166:5: error: expected expression at end of input
  166 |     printf("Enter text
      |     ^~~~~~
./samples/SAFE/__tmp_9fb08344.c:166:5: error: expected declaration or statement at end of input
